[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/UI/PauseBG.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/HorsesOrnate2.png" type="Texture" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/lod = 2.2

[sub_resource type="Animation" id=3]
step = 0.03
tracks/0/type = "bezier"
tracks/0/path = NodePath("BG:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("BG:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("BG:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("BG:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.45 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Blur:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.84 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Blur:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.84 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Blur:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.84 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Blur:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.84 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Sprite:position:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1376, -0.25, 0, 0.25, 0, 808, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.63 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Sprite:position:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 312, -0.25, 0, 0.25, 0, 312, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.63 )
}

[node name="SettingsMenu" type="Control" groups=[
"UI_Special",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 608.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
position = Vector2( 512, 304 )
texture = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 456.0
margin_top = 24.0
margin_right = 816.0
margin_bottom = 608.0
color = Color( 0.0235294, 0.0156863, 0.0823529, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 808, 312 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 311, -9.99724, 730.979, 616.482 )
region_filter_clip = true

[node name="Blur" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 512, 304 )
texture = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "startup"
anims/startup = SubResource( 3 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 456.0
margin_top = 64.0
margin_right = 824.0
margin_bottom = 128.0
color = Color( 0, 0, 0, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 480.0
margin_top = 69.0
margin_right = 561.0
margin_bottom = 83.0
text = "SFX VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 576.0
margin_top = 64.0
margin_right = 768.0
margin_bottom = 88.0
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VolumeSlider"]
margin_left = 208.0
margin_top = 6.0
margin_right = 289.0
margin_bottom = 20.0
text = "100%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 464.0
margin_top = 101.0
margin_right = 565.0
margin_bottom = 115.0
text = "MUSIC VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 576.0
margin_top = 96.0
margin_right = 768.0
margin_bottom = 120.0
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MusicSlider"]
margin_left = 208.0
margin_top = 6.0
margin_right = 289.0
margin_bottom = 20.0
text = "100%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenToggle" type="CheckButton" parent="."]
margin_left = 480.0
margin_top = 128.0
margin_right = 626.0
margin_bottom = 168.0
text = "Fullscreen    "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="VolumeSlider" to="." method="update_sfx_volume"]
[connection signal="value_changed" from="MusicSlider" to="." method="update_music_volume"]
[connection signal="pressed" from="FullscreenToggle" to="." method="_on_CheckButton_pressed"]
